[gd_scene load_steps=9 format=3 uid="uid://dyjjwdldinojg"]

[ext_resource type="Texture2D" uid="uid://cf6bxrh5ccvx3" path="res://assets/duck.png" id="1_oul6g"]
[ext_resource type="Script" uid="uid://d04o2ewfm33s" path="res://player/player.gd" id="1_yw30f"]
[ext_resource type="PackedScene" uid="uid://bubxu3y84jbtm" path="res://components/gravity_component.tscn" id="2_rkbax"]
[ext_resource type="Script" uid="uid://dtabjq4h2a506" path="res://components/gravity_component.gd" id="4_qjkh3"]
[ext_resource type="PackedScene" uid="uid://c6ml63ey4ihma" path="res://components/input_component.tscn" id="5_rgyib"]
[ext_resource type="PackedScene" uid="uid://dge2dmjl1uf55" path="res://components/movement_component.tscn" id="7_8t03j"]
[ext_resource type="PackedScene" uid="uid://dd22uvhl1tudm" path="res://components/jump_component.tscn" id="7_boad6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g6k8r"]
size = Vector2(60, 75)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("gravity_component", "input_component", "movement_component", "jump_component")]
script = ExtResource("1_yw30f")
gravity_component = NodePath("GravityComponent")
input_component = NodePath("InputComponent")
movement_component = NodePath("MovementComponent")
jump_component = NodePath("JumpComponent")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(5, -70)
texture = ExtResource("1_oul6g")
offset = Vector2(-2.5, 30)
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, -38.5)
shape = SubResource("RectangleShape2D_g6k8r")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="InputComponent" parent="CanvasLayer" instance=ExtResource("5_rgyib")]

[node name="MovementComponent" parent="CanvasLayer" instance=ExtResource("7_8t03j")]

[node name="MovementComponent" parent="." instance=ExtResource("7_8t03j")]

[node name="JumpComponent" parent="." instance=ExtResource("7_boad6")]
